import org.gradle.jvm.toolchain.JavaLanguageVersion

plugins {
    id 'java-library'
    id 'org.jetbrains.kotlin.jvm'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

kotlin {
    jvmToolchain(17)
}

dependencies {
    api project(':modules:shared')

    implementation 'org.springframework:spring-context:6.1.5'
    implementation 'org.springframework:spring-jdbc:6.1.5'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.6.1.jre11'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.hierynomus:sshj:0.37.0'
    implementation 'com.hierynomus:smbj:0.13.0'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.mockito:mockito-core:5.11.0'
}

tasks.test {
    useJUnitPlatform()
}
